--- a/components/quiz.html
+++ b/components/quiz.html
@@ -25,7 +25,6 @@
     right: 0;
     bottom: 0;
     align-items: center;
-    
     border-radius: 4px;
     border: 3px solid var(--button-color-blue);
     font-family: 'Public Sans';
@@ -188,7 +187,7 @@ input[type="radio"]:focus {
             grid-template-columns: 1fr 1fr 1fr; 
         }
             .quiz-progress-bar-label {
-                 
+                 padding: 0.5rem;
             }
 
 /* Back button */
@@ -299,12 +298,21 @@ input[type="radio"]:focus {
 
     }
         .recomended-loans-container {
-            
+            margin: 2rem 0;
         }
             .recomended-loan-card-holder {
                 display: flex;
                 flex-direction: row;
             }
+            .recomended-imageContainer {
+                width: 100%;
+                height: 260px;
+            }
+                .recomended-image {
+                    width: 100%;
+                    height: 260px;
+                    object-fit: cover;
+                }
             .recomended-loans-card {
                 flex-grow: 1;
                 flex-basis: 0;
@@ -314,6 +322,9 @@ input[type="radio"]:focus {
                     
                 }
 
+    .summary-step-container {
+        margin: 2rem 0;
+    }
     .summary-step {
         height: min-content;
         display:grid;
@@ -321,7 +332,7 @@ input[type="radio"]:focus {
                             "iconholder step-text"
                             "iconholder step-full-report";
         grid-template-columns: 4rem 1fr;
-        margin: 1rem 0;
+        margin: 2rem 0;
     }
         .summary-step-header {
             grid-area: header;
@@ -362,13 +373,14 @@ input[type="radio"]:focus {
                 height: fit-content;
             }
             .summary-step-text-button-container {
-                min-width: fit-content;
-                min-height: fit-content;
-                
+                display: flex;
+                flex-direction: row;
+                column-gap: 1rem;
             }
                 .summary-step-text-button {
                     background-color: var(--button-color-blue);
                     color: var(--color-white);
+                    padding: 1rem;
                 }
 
         /* Flags */
@@ -405,9 +417,11 @@ input[type="radio"]:focus {
         /* Full Report */
         .full-report-container {
             padding: 2rem;
+            margin: 2rem 0;
             border: 2px solid black;
             grid-area: step-full-report;
         }
+
         .full-report-result-container {
             margin: 1rem 0;
             display: grid;
@@ -426,13 +440,78 @@ input[type="radio"]:focus {
                 }
                 .full-report-result-info-flag {
                 }
+    
+    /* Full Report */
+    .result-container {
+        padding: 3rem;
+    }
+        .result-image-container {
+
+        }
+            .result-image {
+                width:25%
+
+            }
+        .result-title {
+
+        }
+        .result-subTitle {
+
+        }
+        .result-recommendation {
+
+        }
+            .result-recommendation-description {
+
+            }
+            .result-recommendation-note {
+
+            }
+            .result-recommendation-fullQuizText {
+
+            }
+            .result-recommendation-fullQuizSubText {
+                
+            }
+            .result-tile-container {
+                margin: 1rem;
+            }
+                .result-tile {
+                    font-family: 'Public Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 16px;
+                    line-height: 19px;
+                    display: grid;
+                    grid-template-columns: 3rem 1fr;
+                    grid-template-rows: auto auto;
+                    margin: 0.5rem 0;
+                }
+                    .result-number {
+                        padding: 0.25rem;
+                        grid-column-start: 1;
+                        grid-row-start: 1;
+                    }
+                    .result-question {
+                        padding: 0.25rem;
+                        grid-column-start: 2;
+                        grid-row-start: 1;
+                    }
+                    .result-answer {
+                        font-style: bold;
+                        padding: 0.25rem;
+                        grid-column-start: 2;
+                        grid-row-start: 2;
+                    }
 </style>
 
 <div class="fit-content">
-    <div class="container" id="container"></div>
+    <div class="container" id="summary-container"></div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.0/jspdf.debug.js"></script>
+<script type="text/javascript" src="https://unpkg.com/html2canvas@1.4.1/dist/html2canvas.js"></script>
+
 
 <script src="../js/stateManager.js"></script>
 <script>
@@ -446,6 +525,18 @@ input[type="radio"]:focus {
     var conditionals = [];
     var progressBarStage = "You and your farm";
     var pdfData = [];
+
+    // Printed/saved report
+    var bestMatch;
+    var bestMatchDescription;
+    var bestMatchNote;
+    var loanInfoCategory;
+    
+    var report = document.createElement("div");
+    report.classList.add("result-container");
+    report.setAttribute("id","report-container");
+    $('#main-content').append(report);
+    //$(report).hide();
 
     (function() {
         currentQuestion = 0;
@@ -507,9 +598,7 @@ input[type="radio"]:focus {
             _createSummary();
         }
         else {
-            
             $.each(questions, function(key, questionData) {
-                
                 if(questionData.questionId === questionId){
                     progressBarStage = questionData['progressBarStage'];
                     _createQuestionContainer();
@@ -650,8 +739,8 @@ input[type="radio"]:focus {
         question.id = "quiz-questions-container";
         container.append(question);
 
-        $('#container').empty();
-        $('#container').append(container);
+        $('#summary-container').empty();
+        $('#summary-container').append(container);
     }
 
     function _createSummary() {
@@ -668,7 +757,7 @@ input[type="radio"]:focus {
         sumarry.append(_createParagraphElement(text));
 
         // recomended loan
-        sumarry.append(_createSugestedLoans());
+        sumarry.append(_createRecomendedLoans());
         
         // Flags
         text = "Below are the things we’ve flagged and recommend talking to your loan officer about.";
@@ -678,11 +767,11 @@ input[type="radio"]:focus {
         // Steps
         sumarry.append(_createSummarySteps());
 
-        $('#container').empty();
-        $('#container').append(sumarry);
+        $('#summary-container').empty();
+        $('#summary-container').append(sumarry);
     }
 
-    function _createSugestedLoans() {
+    function _createRecomendedLoans() {
         // Has a main loan and posible additioonal recomendations
         var loans = document.createElement("div");
         
@@ -716,17 +805,25 @@ input[type="radio"]:focus {
     // loanInfo = details from JSON, index = index from array of sugeted loans
     function _createSugestedLoanCards(category, loansInCategory, loanInfo, index, loan, recomended) {
         // Image
-        var image = document.createElement("img");
-        console.log(loanInfo)
+        var imageContainer = document.createElement("img");
+        imageContainer.classList.add("recomended-imageContainer");
 
+        var image = document.createElement("img");
+        image.classList.add("recomended-image");
         image.src = './images/loantypes/'+loanInfo.image;
         loan.append(image);
 
         loan.append(_createTitle(loanInfo.category));
         // Description
-        text = "Based on your responses we think you’re best suited for the FSA "+loanInfo.category+".";
+        text = "Based on your responses we think you’re best suited for the FSA " + loanInfo.category + ".";
         loan.append(_createParagraphElement(text));
         loan.append(_createParagraphElement(category.description));
+        loan.append(_createParagraphElement(category.note));
+
+        loanInfoCategory = loanInfo.category
+        bestMatch = text;
+        bestMatchDescription = category.description;
+        bestMatchNote = category.note;
 
         var loanCardHolder = document.createElement("div");
         loanCardHolder.classList.add("recomended-loan-card-holder");
@@ -768,7 +865,7 @@ input[type="radio"]:focus {
             loanCardHolder.append(loanCard);
         }
         loan.append(loanCardHolder);
-
+        _createSaveableReport();
         return loan;
     }
 
@@ -857,7 +954,7 @@ input[type="radio"]:focus {
             "message": "Complete and print each form pertaining to your matched loan to add to your application package. We provide step-by-step instructions on completing each loan application form.",
             "buttons": [ {
                     "buttonText": "ACCESS FORMS",
-                    "buttonURL": "data",
+                    "buttonURL": "onclick=showRelatedForms",
                 }
             ],
             "hasFulleReport": false,
@@ -879,17 +976,19 @@ input[type="radio"]:focus {
             "message": "We recommend downloading and/or printing the quiz and discussing your answers with your local loan officer.",
             "buttons": [ {
                     "buttonText": "DOWNLOAD QUIZ",
-                    "buttonURL": "onclick=generatePDF",
+                    "buttonURL": "onclick=savePDF",
                 },
                 {
                     "buttonText": "PRINT QUIZ",
-                    "buttonURL": "button URL",
+                    "buttonURL": "onclick=printPDF",
                 }
             ],
             "hasFulleReport": true,
         });
    
         var steps = document.createElement("div");
+        steps.classList.add("summary-step-container");
+        
         for (var i = 0; i < stepinfo.length; i++) {
             var step = document.createElement("div");
             step.classList.add("summary-step");
@@ -911,10 +1010,10 @@ input[type="radio"]:focus {
             div.classList.add("summary-step-text-message");
             div.textContent = stepinfo[i].message
             textHolder.append(div);
-
+            
+            var buttonContainer = document.createElement("div");
+            buttonContainer.classList.add("summary-step-text-button-container");
             for (var j = 0; j < stepinfo[i].buttons.length; j++) {
-                div = document.createElement("div");
-                div.classList.add("summary-step-text-button-container");
                 var button = document.createElement('button');
                 button.classList.add("summary-step-text-button");
                 var text = document.createTextNode(stepinfo[i].buttons[j].buttonText);
@@ -927,9 +1026,16 @@ input[type="radio"]:focus {
                         $(this).off('click');
                     });
                 }
+                else {
+                    $(button).off().on('click', openURL.bind(this, stepinfo[i].buttons[j].buttonURL));
+                    $(button).on('click',function() {
+                        openURL.bind(this, stepinfo[i].buttons[j].buttonURL);
+                        $(this).off('click');
+                    });                    
+                }
 
-                div.append(button);
-                textHolder.append(div);
+                buttonContainer.append(button);
+                textHolder.append(buttonContainer);
             }
                 
             step.append(textHolder);
@@ -943,7 +1049,7 @@ input[type="radio"]:focus {
         return steps;
     }
 
-    // The list of questions and answers shown in step 6
+    // The list of questions and answers shown in _createSummarySteps step 4
     function _createFullReport() {
         /////////////////
         //  Full Report
@@ -1008,6 +1114,82 @@ input[type="radio"]:focus {
             fullReport.append(result); 
         }
         return fullReport;
+    }
+    
+    function _createSaveableReport() {
+        var imageContainer = document.createElement("div");
+        imageContainer.classList.add("result-image-container");
+        
+        var image = document.createElement("img");
+        image.classList.add("result-image");
+        image.setAttribute("src", "./images/usda_banner.png");
+        imageContainer.append(image);
+        report.append(imageContainer);
+
+        var title = document.createElement("div");
+        title.classList.add("result-title");
+        title.textContent = "Loan quiz summary page";
+        report.append(title);
+
+        var subTitle = document.createElement("div");
+        subTitle.classList.add("result-subTitle");
+        subTitle.textContent = "Loan Assistance Tool, USDA Federal Service Agency";
+        report.append(subTitle);
+
+        var recommendation = document.createElement("div");
+        recommendation.classList.add("result-recommendation");
+        recommendation.textContent = "Loan recommendation";
+        report.append(recommendation);
+
+        var bestMatchText = document.createElement("div");
+        bestMatchText.classList.add("result-recommendation");
+        bestMatchText.textContent = bestMatch;
+        report.append(bestMatchText);
+
+        var bestMatchDescriptionText = document.createElement("div");
+        bestMatchDescriptionText.classList.add("result-recommendation-description");
+        bestMatchDescriptionText.textContent = bestMatchDescription;
+        report.append(bestMatchDescriptionText);
+
+        var bestMatchNoteText = document.createElement("div");
+        bestMatchNoteText.classList.add("result-recommendation-note");
+        bestMatchNoteText.textContent = bestMatchNote;
+        report.append(bestMatchNoteText);
+       
+        var fullQuizText = document.createElement("div");
+        fullQuizText.classList.add("result-recommendation-fullQuizText");
+        fullQuizText.textContent = "Full quiz";
+        report.append(fullQuizText);
+
+        var fullQuizSubText = document.createElement("div");
+        fullQuizSubText.classList.add("result-recommendation-fullQuizSubText");
+        fullQuizSubText.textContent = "Below are all of the questions and answers to the quiz. We recommend you review these with your loan officer. ";
+        report.append(fullQuizSubText);
+
+        var resultContainer = document.createElement("div");
+        resultContainer.classList.add("result-tile-container");
+        for ( var i = 0; i < pdfData.length; i++ ) {
+            var resultTile = document.createElement("div");
+            resultTile.classList.add("result-tile");
+            
+            var resultNumber = document.createElement("div");
+            resultNumber.classList.add("result-number");
+            resultNumber.textContent = i + 1 +".";
+            resultTile.append(resultNumber);
+
+            var resultQuestion = document.createElement("div");
+            resultQuestion.classList.add("result-question");
+            resultQuestion.textContent = pdfData[i].question;
+            resultTile.append(resultQuestion);
+
+            var resultAnswer = document.createElement("div");
+            resultAnswer.classList.add("result-answer");
+            resultAnswer.textContent = pdfData[i].answer;
+            resultTile.append(resultAnswer);
+            
+            resultContainer.append(resultTile);
+        }
+        report.append(resultContainer);
     }
 
     // The circle with a number to th eleft of steps and questions
@@ -1551,9 +1733,9 @@ input[type="radio"]:focus {
         return paragraphElement;
     }
 
-    //////////////////////////
+    ///////////////////////////////////
     // Load and save answered questions
-    //////////////////////////
+    ///////////////////////////////////
     function updateAnswers() {
         setCookie("answers", JSON.stringify(questionHistory), 365);
     }
@@ -1585,32 +1767,53 @@ input[type="radio"]:focus {
         }
     }
 
-    function generatePDF() {
-        var pdf = new jsPDF({
-            orientation: 'p',
-            unit: 'mm',
-            format: 'a5',
-            putOnlyUsedFonts:true
-            });
+    ///////////////////////////////////
+    // Utilities
+    ///////////////////////////////////
+    function showRelatedForms() {
+        setloanType(loanInfoCategory);
+        setContent("loanforms");
+    }
+    
+    function openURL(url) {
+        window.location = url;
+    }
 
-        var textStart = 0;
-        var fontsize = 10;
-        for ( var i = 0; i < pdfData.length; i++ ) {
-            fontsize = 10;
-            pdf.setFontSize(fontsize).setFontStyle("bold");
-            var question = pdf.splitTextToSize(pdfData[i].question, 120);
-            var questionPosition = textStart + 8;
-            var answerPosition = questionPosition + question.length*5;
-            textStart = answerPosition;
-            pdf.text(10, questionPosition, question);
-            pdf.setFontSize(8).setFontStyle("normal");
-            pdf.text(15, answerPosition, pdfData[i].answer);
-            if(textStart > 150) {
-                pdf.addPage();
-                textStart = 0;
+    function savePDF() {
+        $(report).show();
+        var HTML_Width = $(report).width();
+        var HTML_Height = $(report).height();
+        var top_left_margin = 15;
+        var PDF_Width = HTML_Width + (top_left_margin * 2);
+        var PDF_Height = (PDF_Width * 1.5) + (top_left_margin * 2);
+        var canvas_image_width = HTML_Width;
+        var canvas_image_height = HTML_Height;
+
+        var totalPDFPages = Math.ceil(HTML_Height / PDF_Height) - 1;
+
+        html2canvas(report).then((canvas) => {
+            var imgData = canvas.toDataURL("image/png", 1.0);
+            var pdf = new jsPDF('p', 'pt', [PDF_Width, PDF_Height]);
+            pdf.addImage(imgData, 'PNG', top_left_margin, top_left_margin, canvas_image_width, canvas_image_height);
+            for (var i = 1; i <= totalPDFPages; i++) { 
+                pdf.addPage(PDF_Width, PDF_Height);
+                pdf.addImage(imgData, 'PNG', top_left_margin, -(PDF_Height*i)+(top_left_margin*4),canvas_image_width,canvas_image_height);
             }
-        }
-        pdf.save('FSA Farm Loan Quiz Results.pdf');
+            $(report).hide();
+            pdf.save("Loan Quiz Summary.pdf");
+        });
+    }
+    function printPDF() {
+        $(report).show();
+        html2canvas(report).then((canvas) => {
+            var myImage = canvas.toDataURL("image/png");
+            var tWindow = window.open("");
+            $(tWindow.document.body).html("<img id='Image' src=" + myImage + " 'style='max-width:50%;'></img>").ready(function() {
+                tWindow.focus();
+                tWindow.print();
+            });
+        });
+        $(report).hide();
     }
     
 </script>
