--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -5533,11 +5533,12 @@ footer .footer-tertiary-section .footer-social img{height: 100%;}
     border: 1px solid #1a6ad3;
     box-shadow: 0 1px 4px 0 #bbb;
     padding: 1rem 1.5rem;
-    width: fit-content;
+    max-width: fit-content;
     border-radius: 2.5px;
 }
 @media screen and (max-width: 1000px) {
     .main-header {
+        height: fit-content;
         display: flex;
         flex-direction: column;
     }
@@ -17382,16 +17383,20 @@ h6#related-resources {
 .loantype-card-container {
     -webkit-box-shadow: 0px 1px 4px 0px #BBBBBB; 
     box-shadow: 0px 1px 4px 0px #BBBBBB;
-
-    width: 342px;
-    height:fit-content;
+    max-width: 340px;
+    height: 100%;
     display: grid;
     grid-template-rows: auto auto auto auto auto;
 }
-    .loantype-card-image {
-        width: 342px;
-        display: grid;
+    .loantype-card-image-container {
+        width: 100%;
+        max-height: 160px;
     }
+        .loantype-card-image {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+        }
 
     .loantype-card-title {
         padding-top: 24px;
@@ -17442,4 +17447,8 @@ h6#related-resources {
 
 .fit-content {
     height:fit-content;
+}
+
+.main-header {
+    height: fit-content;
 }
